--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-14  Wade Berrier  <wberrier@novell.com>
+
+	* frontend/Makefile.am:
+	* test/src/Makefile.am:
+	* test/testsuite/Makefile.am:
+	* backend/arch/Makefile.am:
+	* classes/Makefile.am:
+	* interface/Makefile.am:
+	* languages/Makefile.am:
+	More .cs globbing for EXTRA_DIST
+
 2007-12-10  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetClass.cs
