--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+December 16th, 2007 - Martin Baulig
+-----------------------------------
+
+Released version 0.60 "Madrid" of the Mono Debugger :-)
+
 May 9th, 2007 - Martin Baulig
 -----------------------------
 
