--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-18  Martin Baulig  <martin@ximian.com>
 
+	Created new `terrania' branch based on the 0.60 release.
+
+2007-12-18  Martin Baulig  <martin@ximian.com>
+
 	Released version 0.60 "Madrid" of the Mono Debugger :-)
 
 	* configure.in: Require Mono >= 1.2.6.
