2007-12-18  Martin Baulig  <martin@ximian.com>
	* languages/mono/MonoClassInfo.cs
	(MonoClassInfo): Merge get_fields() and get_field_offsets().


svn path=/branches/martin/debugger-terrania/; revision=91550

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -4,6 +4,11 @@
 
 2007-12-18  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoClassInfo.cs
+	(MonoClassInfo): Merge get_fields() and get_field_offsets().
+
+2007-12-18  Martin Baulig  <martin@ximian.com>
+
 	Released version 0.60 "Madrid" of the Mono Debugger :-)
 
 	* configure.in: Require Mono >= 1.2.6.
