2007-12-19  Martin Baulig  <martin@ximian.com>
	* backend/TargetMemoryAccess.cs
	(TargetMemoryAccess.ReadMemory): Add internal version of this
	taking two `IntPtr' arguments.


svn path=/branches/martin/debugger-terrania/; revision=91645

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-19  Martin Baulig  <martin@ximian.com>
 
+	* backend/TargetMemoryAccess.cs
+	(TargetMemoryAccess.ReadMemory): Add internal version of this
+	taking two `IntPtr' arguments.
+
+2007-12-19  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Check for the debugger runtime library as an
 	optional dependency; added `HAVE_MONO_DBG_LIBRARY' automake
 	conditional.
