2007-12-19  Martin Baulig  <martin@ximian.com>
	* languages/mono/MonoRuntime.cs
	(MonoRuntime): Add GetGenericClass().
	(MonoRuntime.GenericClassInfo): New nested public class.


svn path=/branches/martin/debugger-terrania/; revision=91647

--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-19  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoRuntime.cs
+	(MonoRuntime): Add GetGenericClass().
+	(MonoRuntime.GenericClassInfo): New nested public class.
+
+2007-12-19  Martin Baulig  <martin@ximian.com>
+
 	* backend/TargetMemoryAccess.cs
 	(TargetMemoryAccess.ReadMemory): Add internal version of this
 	taking two `IntPtr' arguments.
