--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,30 @@
+2008-01-17  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetObjectKind.cs
+	(TargetObjectKind): Added `GenericParameter' and `GenericInstance'.
+
+	* languages/TargetGenericParameterType.cs: New file.
+	(TargetGenericParameterType): New type.
+
+	* languages/TargetGenericInstanceType.cs: New file.
+	(TargetGenericInstanceType): New type.
+
+	* languages/TargetGenericInstanceObject.cs: New file.
+	(TargetGenericInstanceObject): New file.
+
+	* languages/TargetStructObject.cs
+	(TargetStructObject.GetParentObject): Moved here from
+	`TargetClassObject' and changed return type into
+	`TargetStructType'.
+
+	* languages/TargetClassObject.cs
+	(TargetClassObject.GetParentObject): Moved into
+	`TargetStructObject' and changed return type into
+	`TargetStructType'.
+
+	* languages/mono/MonoGenericInstanceObject.cs: New file.
+	* languages/mono/MonoGenericParameterType.cs: New file.
+
 2007-12-19  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoRuntime.cs
