--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-19  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoClassType.cs
+	(IMonoStructType): New internal interface.
+	(MonoClassType): Make things work if our parent class is a
+	`MonoGenericInstanceType' and not a `MonoClassType'.
+
 2008-01-17  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetObjectKind.cs
