--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-23  Martin Baulig  <martin@ximian.com>
+
+	* test/{testsuite|src}/TestSimpleGenerics.cs: New test.
+
 2008-01-19  Martin Baulig  <martin@ximian.com>
 
 	* configure.in: Use gmcs, not mcs.
