--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-23  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoSymbolFile.cs
+	(MonoSymbolFile.GetMethodName): Include type parameters.
+
+2008-01-23  Martin Baulig  <martin@ximian.com>
+
 	* languages/TargetStructObject.cs
 	(TargetStructObject.GetParentObject): Provide the `Thread'
 	implementation here; made the `TargetMemoryAccess' version
