--- a/debugger/ChangeLog
+++ b/debugger/ChangeLog
@@ -1,3 +1,11 @@
+2008-01-25  Martin Baulig  <martin@ximian.com>
+
+	* frontend/CSharpTokenizer.cs
+	(CSharpTokenizer.ReadGenericArity): New public property.
+	(CSharpTokenizer.ReadDigit): If `ReadGenericArity' is true, only
+	read an integer and stop on the first non-digit.  This is
+	necessary to properly tokenize "Foo`1.Data".
+
 2008-01-23  Martin Baulig  <martin@ximian.com>
 
 	Added `$parent (expr)' and `$parent+N (expr)' syntax.
