--- a/mcs/ChangeLog
+++ b/mcs/ChangeLog
@@ -1,3 +1,26 @@
+2008-02-02  Martin Baulig  <martin@ximian.com>
+
+	* codegen.cs
+	(EmitContext.DefineAnonymousScope): New public method.
+	(EmitContext.DefineCapturedVariable): New public method.
+
+	* statement.cs
+	(Variable.EmitSymbolInfo): New public abstract method.
+	(LocalInfo.EmitSymbolInfo): Call `var.EmitSymbolInfo ()' rather
+	than doing it directly on the builder.
+	(Block.EmitSymbolInfo): New protected virtual method.
+	(Block.Emit): Moved the symbol writer code into EmitSymbolInfo().
+	(ToplevelBlock.EmitSymbolInfo): Overwrite this and call
+	`ScopeInfo.EmitSymbolInfo()' if appropriate.
+
+	* anonymous.cs
+	(ScopeInfo.EmitSymbolInfo): New public method; emit debugging
+	information for captured variables.
+
+2008-02-02  Martin Baulig  <martin@ximian.com>
+
+	***** Terrania changes start at this point *****
+
 2008-01-25  Marek Safar  <marek.safar@gmail.com>
 
 	* report.cs: Correctly reset warnings count after probing.
