--- a/runtime/metadata/ChangeLog
+++ b/runtime/metadata/ChangeLog
@@ -1,3 +1,12 @@
+2008-02-02  Martin Baulig  <martin@ximian.com>
+
+	* debug-mono-symfile.h
+	(MONO_SYMBOL_FILE_VERSION): Bump to 40.
+
+2008-02-02  Martin Baulig  <martin@ximian.com>
+
+	***** Terrania changes start at this point *****
+
 2008-01-31  William Holmes  <billholmes54@gmail.com>
 
 	* process.c (process_module_string_read): Check the size returned form
